--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "unit:test": "jest --config unit/jest.config.json",
-    "api:test": "jest --config api/jest.config.json"
+    "api:test": "jest --config api/jest.config.json",
+    "ui:run": "cypress run --browser chrome --headed --config-file=./ui/cypress.config.ts",
+    "ui:open": "cypress open --config-file=./ui/cypress.config.ts",
+    "ui:report": "allure generate ui/cypress/assets/allure-results --clean -o ui/cypress/assets/allure-report && allure open ui/cypress/assets/allure-report"
   },
   "repository": {
     "type": "git",
@@ -20,8 +23,17 @@
   "devDependencies": {
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "axios": "^0.27.2",
     "axios-logger": "^2.6.1",
+    "cypress": "^10.9.0",
+    "dotenv": "^16.0.2",
+    "eslint": "^8.24.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jest": "^29.0.3",
@@ -29,5 +41,9 @@
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "@shelex/cypress-allure-plugin": "^2.31.0",
+    "allure-commandline": "^2.18.1"
   }
 }
