--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "homepage": "https://github.com/kirillorlov1205/finalProject#readme",
   "devDependencies": {
+    "@shelex/cypress-allure-plugin": "^2.31.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
+    "allure-commandline": "^2.18.1",
     "axios": "^0.27.2",
     "axios-logger": "^2.6.1",
+    "chai": "^4.3.6",
     "cypress": "^10.9.0",
     "dotenv": "^16.0.2",
     "eslint": "^8.24.0",
@@ -41,9 +44,5 @@
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
-  },
-  "dependencies": {
-    "@shelex/cypress-allure-plugin": "^2.31.0",
-    "allure-commandline": "^2.18.1"
   }
 }
