--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,12 +13,13 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "semi": ["error", "always"],
-    "quotes": ["error", "double"],
+    "quotes": ["error", "single"],
     "camelcase": 1,
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-namespace": "off",
     "no-empty-function": "off",
     "@typescript-eslint/no-empty-function": "off",
-    "@angular-eslint/no-empty-lifecycle-method": "off"
+    "@angular-eslint/no-empty-lifecycle-method": "off",
+    "@typescript-eslint/no-var-requires": 0
   }
 }
