--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "unit:test": "jest --config unit/jest.config.json",
     "api:test": "jest --config api/jest.config.json",
-    "ui:run": "rm -rf ui/cypress/assets && cypress run --browser chrome --headed --config-file=./ui/cypress.config.ts",
+    "ui:run": "rm -rf ui/cypress/assets && cypress run --browser chrome --headless --config-file=./ui/cypress.config.ts",
     "ui:open": "cypress open --config-file=./ui/cypress.config.ts",
     "ui:report": "allure generate ui/cypress/assets/allure-results --clean -o ui/cypress/assets/allure-report && allure open ui/cypress/assets/allure-report"
   },
