--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@shelex/cypress-allure-plugin": "^2.31.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
+    "@types/randomstring": "^1.1.8",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "allure-commandline": "^2.18.1",
