--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "chromedriver": "^107.0.0",
     "dotenv": "^16.0.3",
     "mocha": "^10.1.0",
-    "selenium-webdriver": "^4.5.0"
+    "selenium-webdriver": "^4.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
