search test have been added to the playwright

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ allure-report
 allure-results
 **/*.exe
 selenium/assets
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/playwright/configs/playwright
