--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,7 @@
       "@shelex/cypress-allure-plugin",
       "cypress-xpath",
       "cypress-iframe",
-      "log4js"
+      "log4js",
     ] /* Specify type package names to be included without being referenced in a source file. */,
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
