jest coverage script has been added

--- a/api/jest.config.json
+++ b/api/jest.config.json
@@ -1,5 +1,5 @@
 {
   "preset": "ts-jest",
   "testEnvironment": "node",
-  "testMatch": ["**/api/jest-test/**/*.spec.ts"]
+  "testMatch": ["**/jest-test/**/*.spec.ts"]
 }
