--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "unit:test": "jest --config unit/jest.config.json",
-    "api:test": "jest --config api/jest.config.json",
-    "api:coverage": "jest --config api/jest.config.json --coverage",
-    "cy:run": "rm -rf cypress/assets && cypress run --browser chrome --headless --config-file=./cypress/cypress.config.ts",
-    "cy:open": "cypress open --config-file=./cypress/cypress.config.ts",
-    "cy:report": "allure generate cypress/assets/allure-results --clean -o cypress/assets/allure-report && allure open cypress/assets/allure-report",
+    "unit-test": "jest --config unit/jest.config.json",
+    "api-test": "jest --config api/jest.config.json",
+    "api-coverage": "jest --config api/jest.config.json --coverage",
+    "cy-run": "rm -rf cypress/assets && cypress run --browser chrome --headless --config-file=./cypress/cypress.config.ts",
+    "cy-open": "cypress open --config-file=./cypress/cypress.config.ts",
+    "cy-report": "allure generate cypress/assets/allure-results --clean -o cypress/assets/allure-report && allure open cypress/assets/allure-report",
     "selenium": "mocha --config selenium/configs/.mocharc.json",
     "playwright": "rm -rf playwright/test-results && playwright test --config=./playwright/configs/playwright.config.ts",
-    "playwright:report": "playwright show-report playwright/test-results/reports",
+    "playwright-report": "playwright show-report playwright/test-results/reports",
     "playwright-allure-report": "allure generate playwright/test-results/allure-results --clean -o playwright/test-results/allure-report && allure open playwright/test-results/allure-report"
   },
   "repository": {
