--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "unit-test": "jest --config unit/jest.config.json",
     "api-test": "jest --config api/jest.config.json",
     "api-coverage": "jest --config api/jest.config.json --coverage",
-    "cy-run": "cypress run --browser chrome --headless --config-file=./cypress/cypress.config.ts",
+    "cy-run": "cypress run --browser chrome --headless --config-file=./cypress/cypress.config.ts --reporter mochawesome",
     "cy-open": "cypress open --config-file=./cypress/cypress.config.ts",
-    "cy-report": "allure generate cypress/assets/allure-results --clean -o cypress/assets/allure-report && allure open cypress/assets/allure-report",
+    "cy-allure-report": "allure generate cypress/assets/allure-results --clean -o cypress/assets/allure-report && allure open cypress/assets/allure-report",
     "selenium": "mocha --config selenium/configs/.mocharc.json",
     "playwright": "rm -rf playwright/test-results && playwright test --config=./playwright/configs/playwright.config.ts",
     "playwright-report": "playwright show-report playwright/test-results/reports",
-    "playwright-allure-report": "allure generate playwright/test-results/allure-results --clean -o playwright/test-results/allure-report && allure open playwright/test-results/allure-report"
+    "playwright-allure-report": "allure generate playwright/test-results/allure-results --clean -o playwright/test-results/allure-report && allure open playwright/test-results/allure-report",
+    "cy-cleanup": "rm -rf cypress/reports && rm -rf cypress/assets",
+    "cy-merge-reports": "mochawesome-merge cypress/reports/mochawesome-report/*.json > output.json",
+    "cy-mochawesome-report": "marge --reportDir cypress/reports/mochawesome-html-report -t Cypress_Test_Report -p Cypress_HTML_Report -f Cypress_HTML_Report --charts true output.json"
   },
   "repository": {
     "type": "git",
@@ -59,6 +62,9 @@
     "jest-html-reporter": "^3.7.0",
     "log4js": "^6.7.0",
     "mocha": "^10.1.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "playwright": "^1.27.1",
     "randomstring": "^1.2.2",
     "selenium-webdriver": "^4.5.0",
